--- a/TrivialWikiAPI/WikiTrivia.Core/WikiTrivia.Core.csproj
+++ b/TrivialWikiAPI/WikiTrivia.Core/WikiTrivia.Core.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ConnectedUser.cs" />
+    <Compile Include="Models\TriviaTable.cs" />
     <Compile Include="NotificationsCore.cs" />
     <Compile Include="NotificationsHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
